# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\AuthController;
 
 /**
  * @OA\Info(
@@ -19,6 +20,10 @@ use App\Http\Controllers\UserController;
  *     description="Servidor de desenvolvimento"
  * )
  */
+
+// Rotas de autenticação
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
 
 // Rotas de usuários
 Route::apiResource('users', UserController::class);
